--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,19 +1,27 @@
 .header {
-  display: flex;
-  align-items: center;
+  margin-top: .5rem;
+  padding-left: 10px;
 }
 
-.menu li {
-  margin-left: 30px;
+.header ul li {
   list-style: none;
+  margin: 0;
+  padding: .5rem 1rem;
+  border-radius: 3px;
+}
+
+.header ul li:hover {
+  background-color: #444;
+}
+
+.header a:hover {
   text-decoration: none;
 }
 
-.menu li:first-child {
-  margin-left: 50px;
+.header h3 a {
+  color: white;
 }
 
-.menu a {
-  text-decoration: none;
-  font-size: 16px;
+.header h3 a:hover {
+  color: #00bc8c;
 }
