--- a/src/components/item-list/item-list.css
+++ b/src/components/item-list/item-list.css
@@ -1,3 +1,11 @@
 .item-list {
-  width: 350px;
+  margin-bottom: 1rem;
+}
+
+.item-list .list-group-item {
+  cursor: pointer;
+}
+
+.item-list .list-group-item:hover {
+  background-color: #444;
 }
