--- a/src/components/person-details/person-details.css
+++ b/src/components/person-details/person-details.css
@@ -1,19 +1,20 @@
 .person-details {
-  margin-left: 30px;
-  width: 350px;
-  height: 150px;
-  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  padding: 1rem;
+  border: 1px solid #444;
 }
 
-
-.person-details img {
-  padding: 5px;
-  height: 150px;
+.person-details .person-image {
+  width: 30%;
+  height: 30%;
   border-radius: 10px;
-  width: 150px;
 }
 
-.person-details .description {
-  margin-left: 10px;
-  padding-top: 10px;
+.person-details .list-group-item {
+  padding: .25rem;
+}
+
+.person-details .list-group-item .term{
+  margin-right: .5rem;
 }
