--- a/src/components/random-planet/random-planet.css
+++ b/src/components/random-planet/random-planet.css
@@ -1,30 +1,24 @@
 .random-planet {
-  margin-top: 20px;
+  display: flex;
+  padding: 1rem;
+  border: 1px solid #444;
+}
+
+.random-planet .planet-image {
+  width: 150px;
   height: 150px;
-  padding: 10px;
-  border-radius: 5px;
-}
-
-.planet-img {
-  width: auto;
-  height: 120px;
   border-radius: 10px;
-  background-color: black;
+  margin-right: 1rem;
 }
 
-.description {
-  margin-left: 20px;
+.random-planet .list-group {
+  margin: 1rem 0 0 1rem;
 }
 
-.details {
-  list-style: none;
-  padding-left: 20px;
+.random-planet .list-group-item {
+  padding: .25rem;
 }
 
-.details li {
-  font-size: 14px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-  border-top: 1px solid dimgray;
-  font-weight: 500;
+.random-planet .list-group-item .term {
+  margin-right: .5rem;
 }
